--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^20.4.4",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "rollup": "^3.26.3",
