--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "extenv",
+  "name": "exdenv",
   "version": "1.0.0",
   "description": "A module for loading .env files with default environmental files using schema for validating.",
   "keywords": [
-    "extenv",
+    "exdenv",
     "env",
     ".env",
     "environment",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dPaskhin/extenv.git"
+    "url": "git+https://github.com/dPaskhin/exdenv.git"
   },
   "files": [
     "lib"
@@ -39,9 +39,9 @@
   "author": "Dmitrii Paskhin <d.pasxin@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dPaskhin/extenv/issues"
+    "url": "https://github.com/dPaskhin/exdenv/issues"
   },
-  "homepage": "https://github.com/dPaskhin/extenv#readme",
+  "homepage": "https://github.com/dPaskhin/exdenv#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.1.0",
