--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "tap": "^16.3.7"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1"
+  },
+  "peerDependencies": {
     "doubter": "^2.1.0"
   },
   "engines": {
