--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "npm run clean && tsc && rollup -c",
+    "build": "npm run clean && rollup -c",
     "test": "tap",
     "clean": "rimraf ./lib",
     "prune": "npm run clean && rimraf ./node_modules"
@@ -46,17 +46,16 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/node": "^20.4.4",
     "@types/tap": "^15.0.8",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.3.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "rollup": "^3.26.3",
     "tap": "^16.3.7"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1"
   },
   "peerDependencies": {
     "doubter": "^2.1.0"
